<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MensualitesByRange" >

    <TextView
        android:id="@+id/dcap"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView1"
        android:layout_below="@+id/capitalbyr"
        android:layout_marginTop="36dp"
        android:text="@string/label_duree_de"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/cpo" />

    <EditText
        android:id="@+id/dureefrom"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/textView3"
        android:layout_alignBottom="@+id/textView3"
        android:layout_alignLeft="@+id/capitalbyr"
        android:ems="10"
        android:inputType="number"
        android:textColor="@color/cpo" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="31dp"
        android:text="@string/label_mont"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/cpo" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/dcap"
        android:layout_below="@+id/radioGroup1"
        android:text="@string/label_taux"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/cpo" />

    <ImageButton
        android:id="@+id/okbyr"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/assbyr"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="35dp"
        android:contentDescription="@string/label_ok"
        android:src="@drawable/ic_action_accept" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/okbyr"
        android:layout_alignLeft="@+id/textView5"
        android:text="@string/label_per"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/cpo" />

    <RadioGroup
        android:id="@+id/radioGroup1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignTop="@+id/dureeto" >

        <RadioButton
            android:id="@+id/anneesbyr"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/label_annee"
            android:textColor="@color/cpo" />

        <RadioButton
            android:id="@+id/moisbyr"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_mois"
            android:textColor="@color/cpo" />
    </RadioGroup>

    <EditText
        android:id="@+id/dureeto"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/textView3"
        android:layout_alignBottom="@+id/textView3"
        android:layout_toRightOf="@+id/textView3"
        android:ems="10"
        android:inputType="number"
        android:textColor="@color/cpo" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/tauxbyr"
        android:layout_alignBottom="@+id/tauxbyr"
        android:layout_alignRight="@+id/dureeto"
        android:text="@string/label_per"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/cpo" />

    <EditText
        android:id="@+id/tauxbyr"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/textView4"
        android:layout_alignBottom="@+id/textView4"
        android:layout_centerHorizontal="true"
        android:ems="10"
        android:inputType="numberDecimal"
        android:textColor="@color/cpo" />

    <EditText
        android:id="@+id/capitalbyr"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/textView1"
        android:layout_alignBottom="@+id/textView1"
        android:layout_alignLeft="@+id/tauxbyr"
        android:ems="10"
        android:inputType="numberDecimal"
        android:textColor="@color/cpo" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/dcap"
        android:layout_alignBottom="@+id/dcap"
        android:layout_toRightOf="@+id/dureefrom"
        android:text="@string/label_a"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/cpo" />

    <TextView
        android:id="@+id/TextView01"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/assbyr"
        android:layout_alignBottom="@+id/assbyr"
        android:layout_alignLeft="@+id/textView4"
        android:text="@string/label_ass"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/cpo" />

    <EditText
        android:id="@+id/assbyr"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/tauxbyr"
        android:layout_centerVertical="true"
        android:ems="10"
        android:inputType="numberDecimal"
        android:textColor="@color/cpo" />

</RelativeLayout>