<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".Lignes_de_Pret" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="55dp"
        android:text="@string/label_cap"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/textView4"
        android:layout_alignBottom="@+id/textView4"
        android:layout_marginLeft="32dp"
        android:layout_toRightOf="@+id/textView4"
        android:text="@string/label_p2"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/textView5"
        android:layout_alignBottom="@+id/textView5"
        android:layout_marginLeft="28dp"
        android:layout_toRightOf="@+id/textView5"
        android:text="@string/label_p3"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="21dp"
        android:layout_marginTop="16dp"
        android:layout_toRightOf="@+id/textView1"
        android:text="@string/label_p1"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/p1_duree"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/textView3"
        android:layout_alignBottom="@+id/textView3"
        android:layout_alignLeft="@+id/p1_taux"
        android:ems="10"
        android:inputType="numberDecimal" />

    <EditText
        android:id="@+id/p2_duree"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/p1_duree"
        android:layout_alignBottom="@+id/p1_duree"
        android:layout_alignRight="@+id/textView5"
        android:ems="10"
        android:inputType="numberDecimal" />

    <EditText
        android:id="@+id/p3_duree"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/p2_duree"
        android:layout_alignBottom="@+id/p2_duree"
        android:layout_alignLeft="@+id/p3_taux"
        android:ems="10"
        android:inputType="numberDecimal" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView1"
        android:layout_below="@+id/p1_cap"
        android:layout_marginTop="26dp"
        android:text="@string/label_taux"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/p1_taux"
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/textView2"
        android:layout_alignBottom="@+id/textView2"
        android:layout_alignRight="@+id/textView4"
        android:ems="10"
        android:inputType="numberDecimal" />

    <EditText
        android:id="@+id/p2_taux"
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/p1_taux"
        android:layout_alignBottom="@+id/p1_taux"
        android:layout_toLeftOf="@+id/textView6"
        android:ems="10"
        android:inputType="numberDecimal" />

    <EditText
        android:id="@+id/p3_taux"
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/p2_taux"
        android:layout_alignBottom="@+id/p2_taux"
        android:layout_alignLeft="@+id/textView6"
        android:ems="10"
        android:inputType="numberDecimal" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView2"
        android:layout_below="@+id/p1_taux"
        android:layout_marginTop="26dp"
        android:text="@string/label_duree"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/p1_duree"
        android:layout_marginTop="46dp"
        android:text="@string/label_mens"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/mens_max"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/textView7"
        android:layout_alignBottom="@+id/textView7"
        android:layout_toRightOf="@+id/p1_duree"
        android:ems="10"
        android:inputType="numberDecimal" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView7"
        android:layout_below="@+id/mens_max"
        android:layout_marginTop="32dp"
        android:text="@string/label_ass"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/ass_globale"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/textView8"
        android:layout_alignBottom="@+id/textView8"
        android:layout_toRightOf="@+id/p1_duree"
        android:ems="10"
        android:inputType="numberDecimal" />

    <ImageButton
        android:id="@+id/ok_lignes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ass_globale"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="37dp"
        android:contentDescription="@string/label_ok"
        android:src="@drawable/ic_action_accept" />

    <EditText
        android:id="@+id/p1_cap"
        android:layout_width="70dp"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/textView1"
        android:layout_alignBottom="@+id/textView1"
        android:layout_alignLeft="@+id/p1_taux"
        android:ems="10"
        android:inputType="numberDecimal"
        android:textAppearance="?android:attr/textAppearanceSmallInverse" />

    <EditText
        android:id="@+id/p2_cap"
        android:layout_width="70dp"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/p1_cap"
        android:layout_alignBottom="@+id/p1_cap"
        android:layout_alignRight="@+id/mens_max"
        android:ems="10"
        android:inputType="numberDecimal"
        android:textAppearance="?android:attr/textAppearanceSmallInverse" >

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/p3_cap"
        android:layout_width="70dp"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/p2_cap"
        android:layout_alignBottom="@+id/p2_cap"
        android:layout_alignRight="@+id/p3_taux"
        android:ems="10"
        android:inputType="numberDecimal"
        android:textAppearance="?android:attr/textAppearanceSmallInverse" />

</RelativeLayout>
