<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:screenOrientation="portrait"
    android:configChanges="keyboardHidden|orientation|screenSize"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true"
    android:background="@color/black"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="14dp"
        android:text="@string/label_mens"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@color/cpo" />

    <ImageView
        android:id="@+id/menspic"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView1"
        android:layout_centerHorizontal="true"
        android:clickable="true"
        android:contentDescription="@string/label_mens"
        android:src="@drawable/xxh_money_calculator" />

    <TextView
        android:id="@+id/TextView01"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/menspic"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="18dp"
        android:text="@string/label_cap"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@color/cpo" />

    <ImageView
        android:id="@+id/cappic"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/menspic"
        android:layout_below="@+id/TextView01"
        android:layout_marginTop="16dp"
        android:clickable="true"
        android:contentDescription="@string/label_mont"
        android:src="@drawable/xxh_money" />

    <TextView
        android:id="@+id/TextView02"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/cappic"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="18dp"
        android:text="@string/label_lignes"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@color/cpo" />

    <ImageView
        android:id="@+id/butt_lignes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/cappic"
        android:layout_below="@+id/TextView02"
        android:layout_marginTop="18dp"
        android:clickable="true"
        android:contentDescription="@string/label_mens"
        android:src="@drawable/xxh_money_calculator" />

</RelativeLayout>